new job detail added.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <div class="col-md-7">
                      <div class="row person_details">
                         <h3><span>Kamran Jabbar</span></h3>
-                        <h4>Looking for an Opportunity as Software Developer</h4>
+                        <h4>Software Developer at <a target="_blank" href="https://www.pihlajalinna.fi/">Pihlajalinna, Finland</a></h4>
                            <p id="summary">Since 2016, I have served as a Software Developer, I have been repeatedly recognized for
                               developing innovative solutions for globally deployed software and websites. I am
                               responsible for full initial requirement gathering to design, coding, testing, documentation
@@ -210,19 +210,26 @@
                   <h2>Experience</h2>
                </div>
                <div class="education_inner_area">
+                  <div class="education_item wow fadeInUp animated" data-line="3">
+                     <h6>Jun 2020-Present</h6>
+                     <a target="_blank" href="https://www.pihlajalinna.fi/toimipisteet/pihlajalinna-kehrasaari">
+                        <h4>Software Developer</h4>
+                     </a>
+                     <h5>Pihlajalinna Kehräsaari, Tampere, Finland</h5>
+                  </div>
                   <div class="education_item wow fadeInUp animated" data-line="2">
                      <h6>Nov 2017-Aug 2019</h6>
                      <a target="_blank" href="https://pujc.edu.pk">
                         <h4>Software Engineer</h4>
                      </a>
-                     <h5>Coeus Solutions GmbH</h5>
+                     <h5>Coeus Solutions GmbH, Lahore, Pakistan</h5>
                   </div>
                   <div class="education_item wow fadeInUp animated b_section" data-line="1">
                      <h6>Oct 2016-Oct 2017</h6>
                      <a target="_blank" href="http://www.techleadz.com/">
                         <h4>Web Developer</h4>
                      </a>
-                     <h5>Techleadz</h5>
+                     <h5>Techleadz, Lahore, Pakistan</h5>
                   </div>
                </div>
             </section>
