Current location update.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                               <li>Website</li>
                            </ul>
                            <ul>
-                              <li>Helsinki, Finland</li>
+                              <li>Tampere, Finland</li>
                               <li><a href="tel:+358417177847">+358 41 7177847</a></li>
                               <li><a href="https://join.skype.com/invite/n40wneB2Evbz" target="_blank">live:kamran.jabbar_3</a></li>
                               <li><a href="mailto:contact@kamranjabbar.com"><span>contact@kamranjabbar.com</span></a></li>
