--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                            </div>
                            <div class="media-body">
                               <h4>Location</h4>
-                              <p>Joensuu, Finland</p>
+                              <p>Tampere, Finland</p>
                            </div>
                         </div>
                         <div class="media">
