remove contact info

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
    <head>
       <meta charset="utf-8">
-      <meta name="description" content="Kamran Jabbar is Software Engineer, Email: contact@kamranjabbar.com , Contact & WhatsApp # +358417177847">
+      <meta name="description" content="Kamran Jabbar is software developer in Finland">
       <meta name="keywords" content="Kamran Jabbar, Kamran Jabbar resume, Kamran Jabbar PUJC, Kami866 , 8667k8665k , Kamran Jabbar CV, Professional Web Developer, Kamranjabbar, PHP Developer, Codeigniter Developer, Laravel Developer, Web Developer, 3 years experience developer">
       <meta name="author" content="Kamran Jabbar">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -65,7 +65,6 @@
                   <ul class="nav navbar-nav navbar-right">
                      <li class="active"><a href="#about">ABOUT ME </a></li>
                      <li><a href="#skill">Skills</a></li>
-                     <li><a href="#contirbutions">Git Contribution</a></li>
                      <li><a href="#experience">Experience</a></li>
                      <li><a href="#project">Projects</a></li>
                      <li><a href="#education">Education</a></li>
@@ -96,15 +95,11 @@
                         <div class="person_information">
                            <ul>
                               <li>Location</li>
-                              <li>Phone</li>
-                              <li>Skype</li>
                               <li>Email</li>
                               <li>Website</li>
                            </ul>
                            <ul>
-                              <li>Tampere, Finland</li>
-                              <li><a href="tel:+358417177847">+358 41 7177847</a></li>
-                              <li><a href="https://join.skype.com/invite/n40wneB2Evbz" target="_blank">live:kamran.jabbar_3</a></li>
+                              <li>Finland</li>
                               <li><a href="mailto:contact@kamranjabbar.com"><span>contact@kamranjabbar.com</span></a></li>
                               <li><a href="http://www.kamranjabbar.html">www.kamranjabbar.com</a></li>
                            </ul>
@@ -113,8 +108,6 @@
                            <li><a href="https://github.com/kamran-jabbar" target="_blank"><i class="fa fa-github"></i></a></li>
                               <li><a href="https://bitbucket.org/kamranjabbar" target="_blank"><i class="fa fa-bitbucket"></i></a></li>
                            <li><a href="https://www.linkedin.com/in/kamran-jabbar/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                              <li><a href="https://join.skype.com/invite/n40wneB2Evbz" target="_blank"><i class="fa fa-skype"></i></a></li>
-                              <li><a href="https://web.whatsapp.com/send?phone=358417177847" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
                               <li><a href="https://stackoverflow.com/users/6372637/kamran-jabbar" target="_blank"><i class="fa fa-stack-overflow"></i></a></li>
                               <li><a href="https://web.facebook.com/kamrnjabbar" target="_blank"><i class="fa fa-facebook"></i></a></li>
                         </ul>
@@ -182,26 +175,6 @@
                            </div>
                         </div>
                      </div>
-                  </div>
-               </div>
-            </section>
-            <section class="about_person_area pad" id="contirbutions">
-               <div class="main_title">
-                  <h2>Git Contribution(
-                     <a style="text-transform: none;" href="https://github.com/kamran-jabbar" target="_blank">kamran-jabbar</a>
-                     )
-                  </h2>
-               </div>
-               <div class="row">
-                  <div class="col-md-12">
-                     <a style="text-transform: none;" href="https://github.com/kamran-jabbar" target="_blank">
-                        <div class="row person_details">
-                           <div class="calendar">
-                              <!-- Loading stuff -->
-                              Loading the data just for you.
-                           </div>
-                        </div>
-                     </a>
                   </div>
                </div>
             </section>
@@ -300,15 +273,6 @@
                         </div>
                         <div class="media">
                            <div class="media-left">
-                              <i class="fa fa-phone"></i>
-                           </div>
-                           <div class="media-body">
-                              <h4>Skype</h4>
-                              <p><a href="https://join.skype.com/invite/n40wneB2Evbz" target="_blank">live:kamran.jabbar_3</a></p>
-                           </div>
-                        </div>
-                        <div class="media">
-                           <div class="media-left">
                               <i class="fa fa-envelope-o"></i>
                            </div>
                            <div class="media-body">
@@ -329,8 +293,6 @@
                   <li><a href="https://github.com/kamran-jabbar" target="_blank"><i class="fa fa-github"></i></a></li>
                   <li><a href="https://bitbucket.org/kamranjabbar" target="_blank"><i class="fa fa-bitbucket"></i></a></li>
                   <li><a href="https://www.linkedin.com/in/kamran-jabbar/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a href="https://join.skype.com/invite/n40wneB2Evbz" target="_blank"><i class="fa fa-skype"></i></a></li>
-                  <li><a href="https://web.whatsapp.com/send?phone=358417177847" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
                   <li><a href="https://stackoverflow.com/users/6372637/kamran-jabbar" target="_blank"><i class="fa fa-stack-overflow"></i></a></li>
                   <li><a href="https://web.facebook.com/kamrnjabbar" target="_blank"><i class="fa fa-facebook"></i></a></li>
                </ul>
@@ -347,7 +309,6 @@
                   <ul class="nav navbar-nav navbar-right">
                      <li><a href="#about">ABOUT ME </a></li>
                      <li><a href="#skill">Skill</a></li>
-                     <li><a href="#contirbutions">Git Contribution</a></li>
                      <li><a href="#experience">Experience</a></li>
                      <li><a href="#project">Projects</a></li>
                      <li><a href="#education">Education</a></li>
@@ -371,11 +332,5 @@
       <script src="js/jquery.validate.min.js"></script>
       <script src="js/contact.js"></script>
       <script src="js/theme.js"></script>
-      <script src="js/github-calendar.min.js"></script>
-      <script>
-          GitHubCalendar(".calendar", "kamran-jabbar");
-          // or enable responsive functionality
-          GitHubCalendar(".calendar", "kamran-jabbar", { responsive: true });
-      </script>
    </body>
 </html>
