--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+kamranjabbar@outlook.com<!DOCTYPE html>
 <html lang="en">
    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
    <head>
@@ -100,7 +100,7 @@
                            </ul>
                            <ul>
                               <li>Finland</li>
-                              <li><a href="mailto:contact@kamranjabbar.com"><span>contact@kamranjabbar.com</span></a></li>
+                              <li><a href="mailto:kamranjabbar@outlook.com"><span>kamranjabbar@outlook.com</span></a></li>
                               <li><a href="http://www.kamranjabbar.html">www.kamranjabbar.com</a></li>
                            </ul>
                         </div>
@@ -218,7 +218,7 @@
                </div>
                <div class="education_inner_area">
                   <div class="education_item wow fadeInUp animated" data-line="5">
-                     <h6>2019-Present</h6>
+                     <h6>2019-2021</h6>
                      <a target="_blank" href="http://www.uef.fi/web/impit">
                         <h4>Master of Science in Computer Science</h4>
                      </a>
@@ -277,7 +277,7 @@
                            </div>
                            <div class="media-body">
                               <h4>Email</h4>
-                              <p><a href="mailto:contact@kamranjabbar.com"><span>contact@kamranjabbar.com</span></a></p>
+                              <p><a href="mailto:kamranjabbar@outlook.com"><span>kamranjabbar@outlook.com</span></a></p>
                            </div>
                         </div>
                      </div>
