--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-kamranjabbar@outlook.com<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
    <head>
@@ -218,7 +218,7 @@ kamranjabbar@outlook.com<!DOCTYPE html>
                </div>
                <div class="education_inner_area">
                   <div class="education_item wow fadeInUp animated" data-line="5">
-                     <h6>2019-2021</h6>
+                     <h6>2019-Present</h6>
                      <a target="_blank" href="http://www.uef.fi/web/impit">
                         <h4>Master of Science in Computer Science</h4>
                      </a>
