--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                <div class="row">
                   <div class="col-md-5">
                      <div class="person_img">
-                        <img src="img/member/kamranjabbar.jpg" alt="">
+                        <img src="" alt="">
                         <a class="download_btn" href="https://docs.google.com/document/d/1hNfiWZidye17NKz9ZmGjQ1CoCgmCwes_ZLOc06DGR5I/edit" target="_blank"><span>Download Resume</span></a>
                      </div>
                   </div>
