--- a/index.html
+++ b/index.html
@@ -1,336 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-   <head>
-      <meta charset="utf-8">
-      <meta name="description" content="Kamran Jabbar is software developer in Finland">
-      <meta name="keywords" content="Kamran Jabbar, Kamran Jabbar resume, Kamran Jabbar PUJC, Kami866 , 8667k8665k , Kamran Jabbar CV, Professional Web Developer, Kamranjabbar, PHP Developer, Codeigniter Developer, Laravel Developer, Web Developer, 3 years experience developer">
-      <meta name="author" content="Kamran Jabbar">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
-      <title>Kamran Jabbar | Curriculum Vitae</title>
-      <link href="vendors/material-icon/css/materialdesignicons.min.css" rel="stylesheet">
-      <link href="css/font-awesome.min.css" rel="stylesheet">
-      <link href="vendors/linears-icon/style.css" rel="stylesheet">
-      <link href="css/bootstrap.min.css" rel="stylesheet">
-      <link href="vendors/owl-carousel/assets/owl.carousel.css" rel="stylesheet">
-      <link href="vendors/animate-css/animate.css" rel="stylesheet">
-      <link href="css/style.css" rel="stylesheet">
-      <link href="css/responsive.css" rel="stylesheet">
-      <link rel="stylesheet" href="css/colors/default.css" title="default">
-      <link rel="alternate stylesheet" href="css/colors/past.css" title="past">
-      <link rel="stylesheet" href="css/github-calendar-responsive.css"/>
-      <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110281890-2"></script>
-      <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-
-          gtag('config', 'UA-110281890-2');
-      </script>
-      <!--Start of Tawk.to Script-->
-      <script type="text/javascript">
-          var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-          (function(){
-              var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-              s1.async=true;
-              s1.src='https://embed.tawk.to/59da6054c28eca75e4624cf4/default';
-              s1.charset='UTF-8';
-              s1.setAttribute('crossorigin','*');
-              s0.parentNode.insertBefore(s1,s0);
-          })();
-      </script>
-      <!--End of Tawk.to Script-->
-   </head>
-   <body class="light_bg" data-spy="scroll" data-target="#bs-example-navbar-collapse-1" data-offset="80" data-scroll-animation="true">
-      <div id="preloader">
-         <div id="preloader_spinner">
-            <div class="spinner"></div>
-         </div>
-      </div>
-      <header class="header_area">
-         <div class="container">
-            <nav class="navbar navbar-default">
-               <div class="navbar-header">
-                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                  <span class="sr-only">Toggle navigation</span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  </button>
-               </div>
-               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <ul class="nav navbar-nav navbar-right">
-                     <li class="active"><a href="#about">ABOUT ME </a></li>
-                     <li><a href="#skill">Skills</a></li>
-                     <li><a href="#experience">Experience</a></li>
-                     <li><a href="#project">Projects</a></li>
-                     <li><a href="#education">Education</a></li>
-                     <li><a href="#contact">CONTACT</a></li>
-                  </ul>
-               </div>
-            </nav>
-         </div>
-      </header>
-      <div class="container main_container">
-         <div class="content_inner_bg row m0">
-            <section class="about_person_area pad" id="about">
-               <div class="row">
-                  <div class="col-md-5">
-                     <div class="person_img">
-                        <img src="" alt="">
-                        <a class="download_btn" href="https://docs.google.com/document/d/1hNfiWZidye17NKz9ZmGjQ1CoCgmCwes_ZLOc06DGR5I/edit" target="_blank"><span>Download Resume</span></a>
-                     </div>
-                  </div>
-                  <div class="col-md-7">
-                     <div class="row person_details">
-                        <h3><span>Kamran Jabbar</span></h3>
-                        <h4>Software Developer at <a target="_blank" href="https://www.pihlajalinna.fi/">Pihlajalinna, Finland</a></h4>
-                           <p id="summary">Since 2016, I have served as a Software Developer, I have been repeatedly recognized for
-                              developing innovative solutions for globally deployed software and websites. I am
-                              responsible for full initial requirement gathering to design, coding, testing, documentation
-                              and implementation. I have developed efficiently many projects using Python ,JavaScript, Blockstack, NodeJs, PHP, Symfony, Laravel, Codeigniter, Solidity Ethereum, Smart Contract, and well known APIs. I am always open to the challenges in software development.</p>
-                        <div class="person_information">
-                           <ul>
-                              <li>Location</li>
-                              <li>Email</li>
-                              <li>Website</li>
-                           </ul>
-                           <ul>
-                              <li>Finland</li>
-                              <li><a href="mailto:kamranjabbar@outlook.com"><span>kamranjabbar@outlook.com</span></a></li>
-                              <li><a href="http://www.kamranjabbar.html">www.kamranjabbar.com</a></li>
-                           </ul>
-                        </div>
-                        <ul class="social_icon">
-                           <li><a href="https://github.com/kamran-jabbar" target="_blank"><i class="fa fa-github"></i></a></li>
-                              <li><a href="https://bitbucket.org/kamranjabbar" target="_blank"><i class="fa fa-bitbucket"></i></a></li>
-                           <li><a href="https://www.linkedin.com/in/kamran-jabbar/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                              <li><a href="https://stackoverflow.com/users/6372637/kamran-jabbar" target="_blank"><i class="fa fa-stack-overflow"></i></a></li>
-                              <li><a href="https://web.facebook.com/kamrnjabbar" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                        </ul>
-                     </div>
-                  </div>
-               </div>
-            </section>
-            <section class="myskill_area pad" id="skill">
-               <div class="main_title">
-                  <h2>My Skills</h2>
-               </div>
-               <div class="row">
-                  <div class="col-md-6 wow fadeInUp animated">
-                     <div class="skill_item_inner">
-                        <div class="single_skill">
-                           <h4>JavaScript, JQuery</h4>
-                           <div class="progress">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                                 <div class="progress_parcent"><span class="counter">70</span>%</div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="single_skill">
-                           <h4>PHP</h4>
-                           <div class="progress">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                                 <div class="progress_parcent"><span class="counter">80</span>%</div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="single_skill">
-                           <h4>CODEIGNITER, SYMFONY, LARAVEL, Wordpress</h4>
-                           <div class="progress">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                                 <div class="progress_parcent"><span class="counter">80</span>%</div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-                  <div class="col-md-6 wow fadeInUp animated">
-                     <div class="skill_item_inner">
-                        <div class="single_skill">
-                           <h4>Database</h4>
-                           <div class="progress">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                                 <div class="progress_parcent"><span class="counter">70</span>%</div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="single_skill">
-                           <h4>Python</h4>
-                           <div class="progress">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                 <div class="progress_parcent"><span class="counter">50</span>%</div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="single_skill">
-                           <h4>Well Known APIs</h4>
-                           <div class="progress">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                                 <div class="progress_parcent"><span class="counter">80</span>%</div>
-                              </div>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </section>
-            <section class="education_area pad" id="experience">
-               <div class="main_title">
-                  <h2>Experience</h2>
-               </div>
-               <div class="education_inner_area">
-                  <div class="education_item wow fadeInUp animated" data-line="3">
-                     <h6>Jun 2020-Present</h6>
-                     <a target="_blank" href="https://www.pihlajalinna.fi/toimipisteet/pihlajalinna-kehrasaari">
-                        <h4>Software Developer</h4>
-                     </a>
-                     <h5>Pihlajalinna Kehräsaari, Tampere, Finland</h5>
-                  </div>
-                  <div class="education_item wow fadeInUp animated" data-line="2">
-                     <h6>Nov 2017-Aug 2019</h6>
-                     <a target="_blank" href="https://pujc.edu.pk">
-                        <h4>Software Engineer</h4>
-                     </a>
-                     <h5>Coeus Solutions GmbH, Lahore, Pakistan</h5>
-                  </div>
-                  <div class="education_item wow fadeInUp animated b_section" data-line="1">
-                     <h6>Oct 2016-Oct 2017</h6>
-                     <a target="_blank" href="http://www.techleadz.com/">
-                        <h4>Web Developer</h4>
-                     </a>
-                     <h5>Techleadz, Lahore, Pakistan</h5>
-                  </div>
-               </div>
-            </section>
-            <section class="education_area pad" id="project">
-               <div class="main_title">
-                  <h2>Projects</h2>
-               </div>
-               <p>I worked on multiple projects, a complete project list will be sent to you on request.</p>
-            </section>
-            <section class="education_area pad" id="education">
-               <div class="main_title">
-                  <h2>Education</h2>
-               </div>
-               <div class="education_inner_area">
-                  <div class="education_item wow fadeInUp animated" data-line="5">
-                     <h6>2019-Present</h6>
-                     <a target="_blank" href="http://www.uef.fi/web/impit">
-                        <h4>Master of Science in Computer Science</h4>
-                     </a>
-                     <h5>University of Eastern Finland</h5>
-                  </div>
-                  <div class="education_item wow fadeInUp animated" data-line="4">
-                     <h6>2012-2016</h6>
-                     <a target="_blank" href="https://pujc.edu.pk">
-                        <h4>Bachelor of Computer Science (BSCS)</h4>
-                     </a>
-                     <h5>University of the Punjab, Jhelum Campus</h5>
-                  </div>
-                  <div class="education_item wow fadeInUp animated" data-line="3">
-                     <h6>2011-2012</h6>
-                     <a target="_blank" href="https://www.pgc.edu/campus/jehlum">
-                        <h4>Higher Secondary School</h4>
-                     </a>
-                     <h5>Punjab College G.T. Road Jhelum</h5>
-                  </div>
-                  <div class="education_item wow fadeInUp animated b_section" data-line="2">
-                     <h6>2009-2010</h6>
-                     <a target="_blank" href="https://www.google.com/maps/dir/''/Govt.+Comprehensive+High+School+Jhelum/data=!4m5!4m4!1m0!1m2!1m1!1s0x391f911e91cc0b63:0xe5f51464675e1b8d?sa=X&ved=0ahUKEwi_8Kydle7UAhUFqY8KHbWBDLsQ9RcIdzAP">
-                        <h4>Secondary School</h4>
-                     </a>
-                     <h5>Govt. Comprehensive High School Jhelum</h5>
-                  </div>
-                  <div class="education_item wow fadeInUp animated a_section" data-line="1">
-                     <h6>2008</h6>
-                     <a target="_blank" href="https://www.google.com/maps/place/Nice+Institute+of+Computer+Education/@32.927831,73.7274274,17z/data=!3m1!4b1!4m5!3m4!1s0x391f90c385a4f58f:0xb4f61204afa94c55!8m2!3d32.927831!4d73.7296161">
-                        <h4>Office Management</h4>
-                     </a>
-                     <h5>NICE Institute of Computer Science</h5>
-                  </div>
-               </div>
-            </section>
-            <section class="contact_area pad" id="contact">
-               <div class="main_title">
-                  <h2>Contact Me</h2>
-               </div>
-               <div class="row">
-                  <div class="col-md-12">
-                     <div class="left_contact_details wow fadeInUp animated">
-                        <p>Feel free to get in touch with me. I am always open to discussing new projects, creative idea or opportunities to be part of your vision.</p>
-                        <div class="media">
-                           <div class="media-left">
-                              <i class="fa fa-map-marker"></i>
-                           </div>
-                           <div class="media-body">
-                              <h4>Location</h4>
-                              <p>Tampere, Finland</p>
-                           </div>
-                        </div>
-                        <div class="media">
-                           <div class="media-left">
-                              <i class="fa fa-envelope-o"></i>
-                           </div>
-                           <div class="media-body">
-                              <h4>Email</h4>
-                              <p><a href="mailto:kamranjabbar@outlook.com"><span>kamranjabbar@outlook.com</span></a></p>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </section>
-         </div>
-      </div>
-      <footer class="footer_area">
-         <div class="footer_inner">
-            <div class="container">
-               <ul class="social_icon">
-                  <li><a href="https://github.com/kamran-jabbar" target="_blank"><i class="fa fa-github"></i></a></li>
-                  <li><a href="https://bitbucket.org/kamranjabbar" target="_blank"><i class="fa fa-bitbucket"></i></a></li>
-                  <li><a href="https://www.linkedin.com/in/kamran-jabbar/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-                  <li><a href="https://stackoverflow.com/users/6372637/kamran-jabbar" target="_blank"><i class="fa fa-stack-overflow"></i></a></li>
-                  <li><a href="https://web.facebook.com/kamrnjabbar" target="_blank"><i class="fa fa-facebook"></i></a></li>
-               </ul>
-            </div>
-         </div>
-         <div class="footer_copyright">
-            <div class="container">
-               <div class="pull-left">
-                  <h5>
-
-                  </h5>
-               </div>
-               <div class="pull-right">
-                  <ul class="nav navbar-nav navbar-right">
-                     <li><a href="#about">ABOUT ME </a></li>
-                     <li><a href="#skill">Skill</a></li>
-                     <li><a href="#experience">Experience</a></li>
-                     <li><a href="#project">Projects</a></li>
-                     <li><a href="#education">Education</a></li>
-                     <li><a href="#contact">CONTACT</a></li>
-                  </ul>
-               </div>
-            </div>
-         </div>
-      </footer>
-      <script src="js/jquery-2.1.4.min.js"></script>
-      <script src="js/bootstrap.min.js"></script>
-      <script src="vendors/counter-up/waypoints.min.js"></script>
-      <script src="vendors/counter-up/jquery.counterup.min.js"></script>
-      <script src="vendors/isotope/imagesloaded.pkgd.min.js"></script>
-      <script src="vendors/isotope/isotope.pkgd.min.js"></script>
-      <script src="vendors/owl-carousel/owl.carousel.min.js"></script>
-      <script src="vendors/style-switcher/styleswitcher.js"></script>
-      <script src="vendors/style-switcher/switcher-active.js"></script>
-      <script src="vendors/animate-css/wow.min.js"></script>
-      <script src="js/jquery.form.js"></script>
-      <script src="js/jquery.validate.min.js"></script>
-      <script src="js/contact.js"></script>
-      <script src="js/theme.js"></script>
-   </body>
-</html>
+<h2>Site under maintenance</h2>
